bugfix: missing css for img and added border radius for a finer looking image with extra padding to prevent merging content

--- a/frontend/static/css/peer_register.css
+++ b/frontend/static/css/peer_register.css
@@ -93,3 +93,10 @@
 #supervisor-name-group {
     display: none; /* standaard verborgen */
 }
+
+.register-icon {
+    width: 200px;
+    height: auto;
+    padding: 15px;
+    border-radius: 15%;
+}
